tests/data/hsts/standard-tls/hsts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/hsts: "True"
  name: hsts-ingress
spec:
  tls:
  - hosts:
    - hsts.example.com
    secretName: tls-secret
  rules:
  - host: hsts.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
